musicchain/include/musicchain.h

/** Free a string or buffer allocated by the library. */
MUSICCHAIN_API void mc_free(void* ptr);
// ---- Wallet ---------------------------------------------------------

typedef void* mc_wallet_t;
// ---- Audio decoding -------------------------------------------------

typedef void* mc_decoder_t;
// ---- Fingerprinting -------------------------------------------------

typedef void* mc_fingerprint_t;
/** Get compressed base64 fingerprint string.
 *  Caller must free with mc_free(). */
MUSICCHAIN_API char* mc_fingerprint_get_compressed(mc_fingerprint_t fp);
/** Compare two fingerprints; returns similarity in [0.0, 1.0]. */
MUSICCHAIN_API float mc_fingerprint_compare(mc_fingerprint_t fp_a, mc_fingerprint_t fp_b);
// ---- Block parsing --------------------------------------------------

/** Find separator (8 x 0xFF bytes) in block data.
 *  Returns byte offset of separator start, or -1 if not found. */
MUSICCHAIN_API int64_t mc_block_find_separator(const uint8_t* data, size_t len);
/** Extract Ogg audio data from a serialized block.
 *  Allocates *ogg_out; caller must free with mc_free().
 *  Returns 0 on success. */
MUSICCHAIN_API int mc_block_extract_audio(const uint8_t* block_data, size_t block_len,
                            uint8_t** ogg_out, size_t* ogg_len_out);
// ---- Cryptographic utilities ----------------------------------------

/** Compute SHA-256 of data and write 32 bytes to out_hash. */
MUSICCHAIN_API void mc_sha256(const uint8_t* data, size_t len, uint8_t* out_hash);
/** Convert bytes to hex string. Caller must free with mc_free(). */
MUSICCHAIN_API char* mc_bytes_to_hex(const uint8_t* data, size_t len);
/** Convert hex string to bytes.
 *  Allocates *out; caller must free with mc_free().
 *  Returns number of bytes, or -1 on error. */
MUSICCHAIN_API int mc_hex_to_bytes(const char* hex, uint8_t** out);
// ---- Audio validation -----------------------------------------------

/** Audio format tag returned by mc_detect_format(). */
#define MC_FORMAT_UNKNOWN 0
#define MC_FORMAT_OGG     1  /**< Ogg/Vorbis or Ogg/Opus */
#define MC_FORMAT_MP3     2