musicchain_player/lib/src/ffi/bindings.dart


  late final _mc_fingerprint_get_compressedPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(mc_fingerprint_t)>>(
      'mc_fingerprint_get_compressed');
  late final _mc_fingerprint_get_compressed = _mc_fingerprint_get_compressedPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(mc_fingerprint_t)>();

  /// Compare two fingerprints; returns similarity in [0.0, 1.0].
  double mc_fingerprint_compare(
    mc_fingerprint_t fp_a,
    mc_fingerprint_t fp_b,
  ) {
    return _mc_fingerprint_compare(
      fp_a,
      fp_b,
    );
  }

  late final _mc_fingerprint_comparePtr = _lookup<
      ffi.NativeFunction<
          ffi.Float Function(
              mc_fingerprint_t, mc_fingerprint_t)>>('mc_fingerprint_compare');
  late final _mc_fingerprint_compare = _mc_fingerprint_comparePtr
      .asFunction<double Function(mc_fingerprint_t, mc_fingerprint_t)>();

  /// Find separator (8 x 0xFF bytes) in block data.
  /// Returns byte offset of separator start, or -1 if not found.
  int mc_block_find_separator(
    ffi.Pointer<ffi.Uint8> data,
    int len,
  ) {
    return _mc_block_find_separator(
      data,
      len,
    );
  }

  late final _mc_block_find_separatorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(
              ffi.Pointer<ffi.Uint8>, ffi.Size)>>('mc_block_find_separator');
  late final _mc_block_find_separator = _mc_block_find_separatorPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  /// Extract Ogg audio data from a serialized block.
  /// Allocates *ogg_out; caller must free with mc_free().
  /// Returns 0 on success.
  int mc_block_extract_audio(
    ffi.Pointer<ffi.Uint8> block_data,
    int block_len,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> ogg_out,
    ffi.Pointer<ffi.Size> ogg_len_out,
  ) {
    return _mc_block_extract_audio(
      block_data,
      block_len,
      ogg_out,
      ogg_len_out,
    );
  }

  late final _mc_block_extract_audioPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Size,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
              ffi.Pointer<ffi.Size>)>>('mc_block_extract_audio');
  late final _mc_block_extract_audio = _mc_block_extract_audioPtr.asFunction<
      int Function(ffi.Pointer<ffi.Uint8>, int,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>, ffi.Pointer<ffi.Size>)>();

  /// Compute SHA-256 of data and write 32 bytes to out_hash.
  void mc_sha256(
    ffi.Pointer<ffi.Uint8> data,
    int len,
    ffi.Pointer<ffi.Uint8> out_hash,
  ) {
    return _mc_sha256(
      data,
      len,
      out_hash,
    );
  }

  late final _mc_sha256Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Uint8>, ffi.Size,
              ffi.Pointer<ffi.Uint8>)>>('mc_sha256');
  late final _mc_sha256 = _mc_sha256Ptr.asFunction<
      void Function(ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Uint8>)>();

  /// Convert bytes to hex string. Caller must free with mc_free().
  ffi.Pointer<ffi.Char> mc_bytes_to_hex(
    ffi.Pointer<ffi.Uint8> data,
    int len,
  ) {
    return _mc_bytes_to_hex(
      data,
      len,
    );
  }

  late final _mc_bytes_to_hexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Uint8>, ffi.Size)>>('mc_bytes_to_hex');
  late final _mc_bytes_to_hex = _mc_bytes_to_hexPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Uint8>, int)>();

  /// Convert hex string to bytes.
  /// Allocates *out; caller must free with mc_free().
  /// Returns number of bytes, or -1 on error.
  int mc_hex_to_bytes(
    ffi.Pointer<ffi.Char> hex,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> out,
  ) {
    return _mc_hex_to_bytes(
      hex,
      out,
    );
  }

  late final _mc_hex_to_bytesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>>('mc_hex_to_bytes');
  late final _mc_hex_to_bytes = _mc_hex_to_bytesPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Uint8>>)>();
}

final class __crt_locale_data_public extends ffi.Struct {
  external ffi.Pointer<ffi.UnsignedShort> _locale_pctype;

  @ffi.Int()
  external int _locale_mb_cur_max;

  @ffi.UnsignedInt()
  external int _locale_lc_codepage;
}

final class __crt_locale_pointers extends ffi.Struct {
  external ffi.Pointer<__crt_locale_data> locinfo;

  external ffi.Pointer<__crt_multibyte_data> mbcinfo;
}

final class __crt_locale_data extends ffi.Opaque {}

final class __crt_multibyte_data extends ffi.Opaque {}

final class _Mbstatet extends ffi.Struct {
  @ffi.UnsignedLong()
  external int _Wchar;

  @ffi.UnsignedShort()
  external int _Byte;

  @ffi.UnsignedShort()
  external int _State;
}

typedef mc_wallet_t = ffi.Pointer<ffi.Void>;
typedef mc_decoder_t = ffi.Pointer<ffi.Void>;
typedef mc_fingerprint_t = ffi.Pointer<ffi.Void>;

const int _VCRT_COMPILER_PREPROCESSOR = 1;

const int _SAL_VERSION = 20;

const int __SAL_H_VERSION = 180000000;

const int _USE_DECLSPECS_FOR_SAL = 0;

const int _USE_ATTRIBUTES_FOR_SAL = 0;

const int _CRT_PACKING = 8;

const int _VCRUNTIME_DISABLED_WARNINGS = 4514;

const int _HAS_EXCEPTIONS = 1;

const int _WCHAR_T_DEFINED = 1;

const int NULL = 0;

const int _HAS_CXX17 = 0;

const int _HAS_CXX20 = 0;

const int _HAS_CXX23 = 0;

const int _HAS_CXX26 = 0;

const int _HAS_NODISCARD = 1;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -2147483648;

const int INT_FAST32_MIN = -2147483648;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 2147483647;

const int INT_FAST32_MAX = 2147483647;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = 4294967295;

const int UINT_FAST32_MAX = 4294967295;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MIN = -9223372036854775808;

const int INTPTR_MAX = 9223372036854775807;

const int UINTPTR_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIZE_MAX = -1;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;

const int WCHAR_MIN = 0;

const int WCHAR_MAX = 65535;

const int WINT_MIN = 0;

const int WINT_MAX = 65535;

const int _ARM_WINAPI_PARTITION_DESKTOP_SDK_AVAILABLE = 1;

const int _CRT_BUILD_DESKTOP_APP = 1;

const int _UCRT_DISABLED_WARNINGS = 4324;

const int _ARGMAX = 100;

const int _TRUNCATE = -1;

const int _CRT_INT_MAX = 2147483647;

const int _CRT_SIZE_MAX = -1;

const String __FILEW__ = 'C';

const int _CRT_FUNCTIONS_REQUIRED = 1;

const int _CRT_HAS_CXX17 = 0;

const int _CRT_HAS_C11 = 0;

const int _CRT_INTERNAL_NONSTDC_NAMES = 1;

const int __STDC_SECURE_LIB__ = 200411;

const int __GOT_SECURE_LIB__ = 200411;

const int __STDC_WANT_SECURE_LIB__ = 1;

const int _SECURECRT_FILL_BUFFER_PATTERN = 254;

const int _CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES = 0;

const int _CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_COUNT = 0;

const int _CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES = 1;

const int _CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_MEMORY = 0;

const int _CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_MEMORY = 0;

const int _STATIC_INLINE_UCRT_FUNCTIONS = 1;

const int MC_FORMAT_UNKNOWN = 0;

const int MC_FORMAT_OGG = 1;

const int MC_FORMAT_MP3 = 2;
